--- a/assets/css/ui-default.css
+++ b/assets/css/ui-default.css
@@ -32,17 +32,17 @@ a:visited {text-decoration:none;}
 a:hover,
 a:focus {text-decoration:none;}
 button {background:none;font-family:inherit;overflow:visible;text-align:inherit;font-weight:inherit;}
-/* button:hover, */
-/* a:hover, */
-button:focus,a:focus {outline-offset:-2px;outline:2px solid #000;}
 em {font-style:normal;font-weight:700;}
 i {font-style:normal;}
 code {display:inline;color:inherit;font-size:inherit;line-height:inherit;font-family:inherit;font-weight:inherit;}
 pre {color:inherit;font-size:inherit;line-height:inherit;font-family:inherit;font-weight:inherit;margin:0;white-space:break-spaces;}
 table caption {position:absolute;width:1px;height:1px;overflow:hidden;}
 
+button:focus,a:focus,
+input:focus {outline-offset:-1px;outline:1px solid var(--status-focused);}
+
 html {-webkit-text-size-adjust:none;}
-body {word-break:break-word;font-size:14px;line-height:1.6;font-family:'Pretendard';font-weight:400;color:var(--black2);letter-spacing:-0.05px;}
+body {word-break:break-word;font-size:14px;line-height:1.6;font-family:'Pretendard';font-weight:400;}
 
 /* hidden */ 
 .blind {position:absolute!important;color:transparent!important;opacity:0!important;width:1px!important;height:1px!important;font-size:1px!important;overflow:hidden!important;padding:0!important;border:0!important;}
