--- a/assets/css/ui-guide.css
+++ b/assets/css/ui-guide.css
@@ -1,5 +1,5 @@
 html {min-width:0;}
-body {min-width:0;padding:5px;}
+body {min-width:0;}
 .hr > br,
 .hr > div > br {display:block;content:'';}
 .hr > br:after,
@@ -47,7 +47,7 @@ td a.vscodepath{position:absolute;right:0;top:50%;transform:translateY(-50%);dis
     .section-index .table-col table tbody td.article {flex:1 1 100%;width:100%;font-size:16px;}
     .section-index .table-col table tbody td .link {display:block;}
 }
-.ui-guide {background-color:var(--surface-surface100);padding:5px;}
+.ui-guide {background-color:var(--surface-surface100);padding:12px;}
 .ui-guide h1 {font-size:24px;}
 .ui-guide h2 {font-size:18px;margin-bottom:10px;display: flex;justify-content: space-between;}
 .ui-guide h2 span {font-weight: 400;}
