--- a/assets/css/ui-layout.css
+++ b/assets/css/ui-layout.css
@@ -28,48 +28,23 @@ header {position:sticky;left:0;top:0;width:100%;z-index:var(--header-zIndex);bac
 .main-header .logo picture {display:flex;}
 .main-header .logo a {height:inherit;align-items:center;justify-content:center;}
 
-.sub-header {position:relative;display:flex;align-items:center;justify-content:space-between;padding:10px 16px;border-top:1px solid var(--gray100);}
-.sub-header .left,
-.sub-header .right {position:absolute;display:flex;align-items:center;justify-content:center;gap:10px;}
-.sub-header .left {left:16px;}
-.sub-header .right {right:16px;}
-.sub-header .center {display:flex;flex:1 1 100%;justify-content:center;padding:0 60px;}
-.sub-header .center h2  {height:30px;line-height:30px;font-size:18px;font-weight:700;color:var(--gray950);
-    display:-webkit-inline-box !important;
-    -webkit-box-orient:vertical !important;
-    overflow:hidden !important;
-    text-overflow:ellipsis !important;
-    vertical-align:top;
-    -webkit-line-clamp:1;
-    word-break:break-all;
-}
-
-/* bottom-nav */
-.bottom-nav {position:sticky;width:100%;left:0;bottom:0;background-color:var(--white);z-index:calc(var(--header-zIndex) - 100);}
-.bottom-nav ul {display:flex;}
-.bottom-nav ul li {flex:1;}
-.bottom-nav ul li a {display:flex;height:70px;flex-direction:column;align-items:center;justify-content:center;gap:4px;}
-.bottom-nav ul li a span {font-size:12px;color:var(--black);}
-
-/* bottom-btn */
-.bottom-btn {position:sticky;width:100%;left:0;bottom:0;background-color:var(--white);z-index:calc(var(--header-zIndex) - 100);margin-top:10px;}
-.bottom-btn .btn-wrap {display:flex;gap:10px;padding:16px;}
-.bottom-btn .btn-wrap > *  {flex:1 1 100%;font-weight:700;}
-
-.btn-list {display:flex;padding:10px 16px;gap:10px;flex-wrap:wrap;}
-
 /* main */
 main {position:relative;min-height:100vh;}
 main {display:flex;flex-direction:column;}
-main .main-inner {flex:1 1 calc(100% - 60px);}
+main .main-inner {flex:1 1 calc(100% - 52px);}
 
 /* section */
 .section {padding:16px;}
 .section-menu {padding:0;}
+
+/* bottom-btn */
+.bottom-btn {position:sticky;width:100%;left:0;bottom:0;background-color:var(--white);z-index:calc(var(--header-zIndex) - 100);}
+
+
 /* btn-wrap */
-.btn-wrap {padding:16px;}
+.btn-wrap {display:flex;gap:8px;padding:12px 16px;justify-content: center;align-items: center;background-color:var(--white-100);}
 .btn-wrap > *:only-child {flex:1 1 100%;}
-.btn-wrap > * > * {flex:1 1 100%;}
-.section .btn-wrap {padding:16px 0;}
+.btn-wrap > * {flex:1;}
+.btn-wrap .btn-secondary {flex:0 1 100px;}
 
 
