--- a/assets/css/ui-guide.css
+++ b/assets/css/ui-guide.css
@@ -48,10 +48,14 @@ td a.vscodepath{position:absolute;right:0;top:50%;transform:translateY(-50%);dis
     .section-index .table-col table tbody td .link {display:block;}
 }
 .ui-guide {background-color:var(--surface-surface100);padding:12px;}
-.ui-guide h1 {font-size:24px;}
-.ui-guide h2 {font-size:18px;margin-bottom:10px;display: flex;justify-content: space-between;}
-.ui-guide h2 span {font-weight: 400;}
-.ui-guide p {font-size:14px;}
+.ui-guide h1:not([class]) {font-size:24px;}
+.ui-guide h2:not([class]) {font-size:20px;margin-bottom:10px;display: flex;justify-content: space-between;}
+.ui-guide h2:not([class]) span {font-weight: 400;}
+.ui-guide p:not([class])  {font-size:14px;}
 
-.ui-guide .ui-guide-section {margin-top:10px;}
+.ui-guide .ui-guide-section {margin-top:20px;}
 .ui-guide .guide-column-list {display:flex;flex-direction:column;gap:10px;}
+.ui-guide .ui-guide-box {border:1px solid var(--black-20);border-radius:20px;padding:10px;}
+.ui-guide .ui-guide-box dl:not(:last-child) {margin-bottom:10px;}
+.ui-guide .ui-guide-box dl dt {font-size:16px;font-weight:700;}
+.ui-guide .ui-guide-box dl dd {display:flex;align-items:center;justify-content:space-between;margin-top:10px;}
