--- a/html/components/component_variable.html
+++ b/html/components/component_variable.html
@@ -311,6 +311,7 @@
 				<li style="color:var(--status-help);"><span>status-help</span><i></i></li>
 				<li style="color:var(--status-info);"><span>status-info</span><i></i></li>
 				<li style="color:var(--status-success);"><span>status-success</span><i></i></li>
+				<li style="color:var(--status-focused);"><span>status-focused</span><i></i></li>
 				<li style="color:var(--surface-surface);"><span>surface-surface</span><i></i></li>
 				<li style="color:var(--surface-surface0);"><span>surface-surface0</span><i></i></li>
 				<li style="color:var(--surface-surface100);"><span>surface-surface100</span><i></i></li>
