--- a/html/components/component_tab.html
+++ b/html/components/component_tab.html
@@ -46,6 +46,7 @@
 	<script src="../../assets/plugins/jquery-ui/jquery-ui.min.js"></script>
 	<!-- //[plugins] -->
 
+	<!-- ui source -->
 	<link rel="stylesheet" href="../../assets/css/ui-fonts.css">
 	<link rel="stylesheet" href="../../assets/css/ui-variable.css">
 	<link rel="stylesheet" href="../../assets/css/ui-default.css">
@@ -58,53 +59,119 @@
 	<script src="../../assets/js/ui-script.js"></script>
 	<script src="../../assets/js/ui-temp.js"></script> <!-- 개발서버에서 include 제외해주세요 -->
 	<!-- //ui source -->
-
 </head>
 
 <body>
-
-	<div>
+	<div class="ui-guide">
 		<h1>Tab</h1>
-		<div class="column">
-			<div class="hr">
-				<h2>Type Button</h2>
-				<div class="tab-content">
-					<ul class="tab-list" role="tablist">
-						<li class="tab tab-active"><button type="button" data-controls="tab-subpanel01" role="tab">tab-sub01</button></li>
-						<li class="tab"><button type="button" data-controls="tab-subpanel02" role="tab">tab-sub02</button></li>
-						<li class="tab"><button type="button" data-controls="tab-subpanel03" role="tab">tab-sub03</button></li>
-					</ul>
-					<div id="tab-subpanel01" class="tabpanel">
-						<h3 class="blind">tab-sub01</h3>
-						<div style="background-color:#ff9999;">tab-sub01</div>
-					</div>
-					<div id="tab-subpanel02" class="tabpanel">
-						<h3 class="blind">tab-sub02</h3>
-						<div style="background-color:#ff6666;">tab-sub02</div>
-					</div>
-					<div id="tab-subpanel03" class="tabpanel">
-						<h3 class="blind">tab-sub03</h3>
-						<div style="background-color:#ff3333;">tab-sub03</div>
-					</div>
+
+		<div class="ui-guide-section">
+			<h2>Tab <span>Col</span></h2>
+
+			<h3>Type Button</h3>
+			<!-- tab-content -->
+			<div class="tab-content">
+				<ul class="tab-list tab-col overflow-list" role="tablist">
+					<li class="tab tab-active"><button type="button" data-controls="tab-subpanel01" role="tab">tab-sub01</button></li>
+					<li class="tab"><button type="button" data-controls="tab-subpanel02" role="tab">tab-sub02</button></li>
+					<li class="tab"><button type="button" data-controls="tab-subpanel03" role="tab">tab-sub03</button></li>
+				</ul>
+				<div id="tab-subpanel01" class="tabpanel">
+					<h3 class="blind">tab-sub01</h3>
+					<div>tab-sub01</div>
+				</div>
+				<div id="tab-subpanel02" class="tabpanel">
+					<h3 class="blind">tab-sub02</h3>
+					<div>tab-sub02</div>
+				</div>
+				<div id="tab-subpanel03" class="tabpanel">
+					<h3 class="blind">tab-sub03</h3>
+					<div>tab-sub03</div>
 				</div>
 			</div>
+			<!-- //tab-content -->
+
 			<hr>
-			<div class="hr">
-				<h2>Type Link</h2>
-				<!-- tab-content -->
-				<div class="tab-content">
-					<ul class="tab-list">
-						<li class="tab tab-active"><a href="#">tab-sub01</a></li>
-						<li class="tab"><a href="#">tab-sub02</a></li>
-						<li class="tab"><a href="#">tab-sub03</a></li>
-					</ul>
-				</div>
-				<!-- //tab-content -->
+			<h3>Type Anchor</h3>
+			<!-- tab-content -->
+			<div class="tab-content">
+				<ul class="tab-list tab-col overflow-list" role="tablist">
+					<li class="tab tab-active"><a role="tab" href="#">tab-sub01</a></li>
+					<li class="tab"><a role="tab" href="#">tab-sub02</a></li>
+					<li class="tab"><a role="tab" href="#">tab-sub03</a></li>
+				</ul>
 			</div>
+			<!-- //tab-content -->
+
+			<hr>
+			<h3>Type scrollable</h3>
+			<!-- tab-content -->
+			<div class="tab-content">
+				<ul class="tab-list tab-col overflow-list" role="tablist">
+					<li class="tab tab-active"><a role="tab" href="#">tab-sub01</a></li>
+					<li class="tab"><a role="tab" href="#">tab-sub02</a></li>
+					<li class="tab"><a role="tab" href="#">tab-sub03</a></li>
+					<li class="tab"><a role="tab" href="#">tab-sub03</a></li>
+				</ul>
+			</div>
+			<!-- //tab-content -->
+
+		</div>
+		<hr>
+
+		<div class="ui-guide-section">
+			<h2>Tab <span>Anchor</span></h2>
+
+			<h3>Type Button</h3>
+			<!-- tab-content -->
+			<div class="tab-content">
+				<ul class="tab-list tab-anchor overflow-list" role="tablist">
+					<li class="tab tab-active"><button type="button" data-controls="tab-subpanel04" role="tab">tab-sub01</button></li>
+					<li class="tab"><button type="button" data-controls="tab-subpanel05" role="tab">tab-sub02</button></li>
+					<li class="tab"><button type="button" data-controls="tab-subpanel06" role="tab">tab-sub03</button></li>
+				</ul>
+				<div id="tab-subpanel04" class="tabpanel">
+					<h3 class="blind">tab-sub01</h3>
+					<div>tab-sub01</div>
+				</div>
+				<div id="tab-subpanel05" class="tabpanel">
+					<h3 class="blind">tab-sub02</h3>
+					<div>tab-sub02</div>
+				</div>
+				<div id="tab-subpanel06" class="tabpanel">
+					<h3 class="blind">tab-sub03</h3>
+					<div>tab-sub03</div>
+				</div>
+			</div>
+			<!-- //tab-content -->
+
+			<hr>
+			<h3>Type Anchor</h3>
+			<!-- tab-content -->
+			<div class="tab-content">
+				<ul class="tab-list tab-anchor overflow-list" role="tablist">
+					<li class="tab tab-active"><a role="tab" href="#">tab-sub01</a></li>
+					<li class="tab"><a role="tab" href="#">tab-sub02</a></li>
+					<li class="tab"><a role="tab" href="#">tab-sub03</a></li>
+				</ul>
+			</div>
+			<!-- //tab-content -->
+
+			<hr>
+			<h3>Type scrollable</h3>
+			<!-- tab-content -->
+			<div class="tab-content">
+				<ul class="tab-list tab-anchor overflow-list" role="tablist">
+					<li class="tab tab-active"><a role="tab" href="#">tab-sub01</a></li>
+					<li class="tab"><a role="tab" href="#">tab-sub02</a></li>
+					<li class="tab"><a role="tab" href="#">tab-sub03</a></li>
+					<li class="tab"><a role="tab" href="#">tab-sub03</a></li>
+				</ul>
+			</div>
+			<!-- //tab-content -->
+
 		</div>
 	</div>
-
-
 </body>
 
 </html>
